tests/invalid/syntax/struct_field_no_type.nyx
// INVALID: struct field missing type annotation
// Expected parse error: colon + type required
struct Bad
    x
    y: i32
